@@ -747,6 +747,11 @@ Optimizations
 * LUCENE-2205: Very substantial (3-5X) RAM reduction required to hold
   the terms index on opening an IndexReader (Aaron McCurry via Mike McCandless)
 
+* LUCENE-3443: FieldCache can now set docsWithField, and create an
+  array, in a single pass.  This results in faster init time for apps
+  that need both (such as sorting by a field with a missing value).
+  (Mike McCandless)
+
 Test Cases
 
 * LUCENE-3420: Disable the finalness checks in TokenStream and Analyzer
